--- a/web/styles/application/components.scss
+++ b/web/styles/application/components.scss
@@ -21,9 +21,12 @@
 
 @import "../../components/Grid/grid.scss";
 @import "../../components/Grouper/grouper.scss";
+@import "../../components/HeaderWithTiles/_header-with-tiles.scss";
 @import "../../components/Icon/icon.scss";
 @import "../../components/IconCalendar/icon-calendar.scss";
 @import "../../components/IconSelector/icon-selector.scss";
+@import "../../components/ImageCard/_image-card.scss";
+@import "../../components/ImageCardList/_image-card-list.scss";
 @import "../../components/ImageWithSpotlight/_image-with-spotlight.scss";
 
 @import "../../components/LabelValue/_label-value.scss";
@@ -43,6 +46,7 @@
 
 @import "../../components/SpeedDial/speed-dial.scss";
 @import "../../components/Tabs/tabs.scss";
+@import "../../components/TextWithImageTiles/_text-with-image-tiles.scss";
 @import "../../components/Ticker/ticker.scss";
 @import "../../components/Timer/timer.scss";
 @import "../../components/UserMenu/_user-menu.scss";
