--- a/web/styles/application/containers.scss
+++ b/web/styles/application/containers.scss
@@ -7,6 +7,7 @@
 
 @import "../../containers/DynamicContent/_dynamic-content.scss";
 @import "../../containers/LayoutContent/_layout-content.scss";
+@import "../../containers/MediaGallery/_media-gallery.scss";
 
 @import "../../containers/PageBuilder/Panel/_panel.scss";
 @import "../../containers/PageBuilder/_component-editor.scss";
