Fixed frameowkr styles

--- a/web/components/Icon/icon.scss
+++ b/web/components/Icon/icon.scss
@@ -136,6 +136,9 @@
   &--default {
     color: $sq-color-muted;
   }
+  &--white {
+    color: $sq-color-slate-lightest;
+  }
   &--muted-light {
     color: $sq-color-muted-light;
   }
