--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -108,7 +108,6 @@
       }
       &-text {
         width: 100%;
-        @include text-ellipsis($lines: 1);
       }
       &.sort-enable {
         .sq-grid__header-row-cell-wrapper {
@@ -276,6 +275,18 @@
     }
   }
 
+  
+
+  &--view-default {
+    &.sq-grid {
+      .sq-grid__data-cell {
+        .sq-text {
+          display: block;
+          @include text-ellipsis($lines: 2);
+        }
+      }
+    }
+  }
   &--view-compact {
     &.sq-grid {
       .sq-grid__data-row {
@@ -295,7 +306,6 @@
   }
   &--view-comfort {
     &.sq-grid {
-      
       .sq-grid__data-row {
         min-height: 80px !important;
       }
@@ -349,9 +359,6 @@
       flex-grow: 0;
       justify-content: flex-start;
       overflow: hidden;
-      .sq-text {
-        @include text-ellipsis($lines: 1);
-      }
     }
     .col-small {
       flex-basis: 100px;
