--- a/web/components/Grid/grid.scss
+++ b/web/components/Grid/grid.scss
@@ -86,6 +86,7 @@
       font-size: 10px;
       text-transform: uppercase;
       overflow: hidden;
+      @include text-ellipsis($lines: 1);
       &--spacer {
         flex-basis: 20px !important;
         min-width: 20px !important;
