Added new content components

--- a/web/styles/_helpers.scss
+++ b/web/styles/_helpers.scss
@@ -83,6 +83,9 @@ $sides: (
 .j-content-fl-end {
   justify-content: flex-end;
 }
+.j-content-center {
+  justify-content: center;
+}
 .j-content-fl-start {
   justify-content: flex-end;
 }
