--- a/web/containers/EmailTemplateList/_email-template.scss
+++ b/web/containers/EmailTemplateList/_email-template.scss
@@ -1,1 +1,7 @@
-.sq-auth-users {}
+.sq-email-template-list {
+  &-test {
+    @media (min-width: $screen-md) {
+      min-width: 800px;
+    }
+  }
+}
