--- a/web/components/ui/ImageBlockWIthText/_image-block-with-text.scss
+++ b/web/components/ui/ImageBlockWIthText/_image-block-with-text.scss
@@ -19,6 +19,20 @@
     padding: 50px;
   }
 
+  &--left-aligned {
+    .sq-image-block-with-text__container {
+      > div:nth-child(1) {
+        order: 2;
+      }
+      > div:nth-child(2) {
+        order: 1;
+      }
+    }
+    .sq-image-block-with-text__text {
+      text-align: right;
+    }
+  }
+
   &--style-bg-black {
     .sq-image-block-with-text__text {
       background-color: black;
