Added content components

--- a/web/components/Icon/icon.scss
+++ b/web/components/Icon/icon.scss
@@ -166,6 +166,42 @@
   &--success-dark {
     color: $sq-color-success-dark;
   }
+  &--blue {
+    color: $sq-color-extra-blue;
+  }
+  &--blue-dark {
+    color: $sq-color-extra-blue-dark;
+  }
+  &--yellow {
+    color: $sq-color-extra-yellow;
+  }
+  &--yellow-dark {
+    color: $sq-color-extra-yellow-dark;
+  }
+  &--red {
+    color: $sq-color-extra-red;
+  }
+  &--red-dark {
+    color: $sq-color-extra-red-dark;
+  }
+  &--green {
+    color: $sq-color-extra-green;
+  }
+  &--green-dark {
+    color: $sq-color-extra-green-dark;
+  }
+  &--pink {
+    color: $sq-color-extra-pink;
+  }
+  &--pink-dark {
+    color: $sq-color-extra-pink-dark;
+  }
+  &--purple {
+    color: $sq-color-extra-purple;
+  }
+  &--purple-dark {
+    color: $sq-color-extra-purple-dark;
+  }
 }
 
 .sq-icon.sq-icon {
