--- a/web/styles/abstract/_variables.scss
+++ b/web/styles/abstract/_variables.scss
@@ -128,6 +128,19 @@ $sq-color-success-dark: darken($sq-color-success, 2%)!default;
 $sq-color-success-darker: darken($sq-color-success, 5%)!default;
 $sq-color-success-darkest: darken($sq-color-success, 10%)!default;
 
+$sq-color-extra-blue: #4267B2;
+$sq-color-extra-blue-dark: #153067;
+$sq-color-extra-red: #DB4437;
+$sq-color-extra-red-dark: #9a170b;
+$sq-color-extra-yellow: #F4B400;
+$sq-color-extra-yellow-dark: #a87b00;
+$sq-color-extra-green: #0F9D58;
+$sq-color-extra-green-dark: #075E54;
+$sq-color-extra-pink: #FF00BF;
+$sq-color-extra-pink-dark: #7a005c;
+$sq-color-extra-purple: #6222bb;
+$sq-color-extra-purple-dark: #2f0a4e;
+
 
 $brand-primary: $sq-color-primary !default; // #337ab7
 $brand-success:$sq-color-success !default;
