--- a/web/components/ui/ImageBlockWIthText/_image-block-with-text.scss
+++ b/web/components/ui/ImageBlockWIthText/_image-block-with-text.scss
@@ -1,19 +1,34 @@
 .sq-image-block-with-text {
+  &__image {
+    order: 1;
+  }
+  &__text {
+    order: 2;
+  }
   &__container {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    
     align-items: center;
     > div {
-      flex-basis: 50%;
+      flex-basis: 200px;
+      width: 100%;
+      @media (min-width: $screen-sm) {
+        width: auto;
+        flex-basis: 50%;
+      }
       flex-shrink: 0;
       height: 400px;
       display: flex;
       align-items: center;
     }
-    
+    @media (min-width: $screen-sm) {
+      flex-direction: row;
+    }
   }
   &__image {
-   background-size: cover;
+    background-size: cover;
   }
   &__text {
     padding: 50px;
@@ -21,11 +36,14 @@
 
   &--left-aligned {
     .sq-image-block-with-text__container {
-      > div:nth-child(1) {
-        order: 2;
-      }
-      > div:nth-child(2) {
-        order: 1;
+      @media (min-width: $screen-sm) {
+        .sq-image-block-with-text__image {
+          order: 2;
+        }
+        .sq-image-block-with-text__text {
+          order: 1;
+        }
+        
       }
     }
     .sq-image-block-with-text__text {
