Fixed progress visible in editor

--- a/web/containers/PageBuilder/_component-editor.scss
+++ b/web/containers/PageBuilder/_component-editor.scss
@@ -1,6 +1,12 @@
 .sq-component-editor {
-  .tp-progress--active {
+  .tp-progress--full-screen .tp-progress__spinner {
+    position: absolute !important;
+  }
+  .tp-progress__overlay {
     display: none !important;
+  }
+  .tp-progress {
+    position: static !important;
   }
   position: relative;
   padding: 35px 15px;
