--- a/web/components/ui/Team/_team.scss
+++ b/web/components/ui/Team/_team.scss
@@ -19,6 +19,7 @@
   }
   &__item {
     padding:30px  50px ;
+    height: 430px;
     box-shadow: 0px 10px 10px $sq-color-slate-lightest;
     border-radius: 15px;
     display: flex;
@@ -40,5 +41,6 @@
     @include text-ellipsis(7);
     text-align: center;
     margin-bottom: 8px;
+    height: 137px;
   }
 }
