Fixed feature drag and drop

--- a/web/components/ui/TextColumnWithLinks/_text-column-links.scss
+++ b/web/components/ui/TextColumnWithLinks/_text-column-links.scss
@@ -3,7 +3,7 @@
   &-default {
     margin: 0 20px;
     @media (min-width: $screen-sm) {
-      margin: 0 100px;
+      margin: 0 auto;
     }
   }
 
