--- a/web/components/ImageWithSpotlight/_image-with-spotlight.scss
+++ b/web/components/ImageWithSpotlight/_image-with-spotlight.scss
@@ -1,8 +1,9 @@
 .sq-image-with-spotlight {
   min-height: 450px;
+  position: relative;
   &__container {
     position: relative;
-    z-index: -1;
+    z-index: 1;
   }
   &__bg {
     background-repeat: no-repeat;
@@ -39,10 +40,13 @@
   &__actions-container {
     display: flex;
     justify-content: center;
-    margin-top: -60px;
+    position: absolute;
+    top: 65%;
+    width: 100%;
     gap: 20px;
     margin-left: 15px;
     margin-right: 15px;
+    z-index: 2;
     flex-wrap: wrap;
     @media (min-width: $screen-sm) {
     }
