--- a/web/styles/_helpers.scss
+++ b/web/styles/_helpers.scss
@@ -89,6 +89,15 @@ $sides: (
 .j-content-fl-start {
   justify-content: flex-end;
 }
+.fl-a-items-fl-end {
+  align-items: flex-end;
+}
+.fl-a-items-center {
+  align-items: center;
+}
+.fl-a-items-fl-start {
+  align-items: flex-end;
+}
 .w-auto {
   width: auto;
 }
