--- a/web/containers/PageBuilder/_placeholder.scss
+++ b/web/containers/PageBuilder/_placeholder.scss
@@ -18,8 +18,8 @@
       border: solid 2px $sq-color-warning-light;
     }
     &.sq-placeholder-drop--default {
-      border: solid 2px $sq-color-primary-light;
-      background-color: $sq-color-primary-lighter;
+      border: solid 2px $sq-color-extra1-light;
+      background-color: $sq-color-extra1-lighter;
     }
   }
   &-style-line {
