--- a/web/components/ui/Pricing/_pricing.scss
+++ b/web/components/ui/Pricing/_pricing.scss
@@ -48,6 +48,7 @@
       color: white;
     }
     .sq-pricing__plan {
+      border: solid 1px $sq-color-slate-lightest;
       .sq-pricing__plan-header {
         background-color: $sq-color-slate;
       }
