--- a/web/containers/PageBuilder/_component-editor.scss
+++ b/web/containers/PageBuilder/_component-editor.scss
@@ -10,9 +10,9 @@
     position: static !important;
   }
   position: relative;
-  padding: 38px 15px;
+  padding: 38px 0;
   @media (min-width: $screen-lg) {
-    padding: 38px;
+    padding: 38px 0;
   }
   border: 1px dashed transparent;
   background-color: white;
