--- a/web/components/Form/form.scss
+++ b/web/components/Form/form.scss
@@ -65,6 +65,9 @@
         @media (min-width:$screen-sm) {
           flex-basis: auto;
           padding-right: 20px;
+          &:last-child {
+            padding-right: 0;
+          }
         }
       }
     }
