--- a/web/styles/_screen.scss
+++ b/web/styles/_screen.scss
@@ -35,9 +35,11 @@
   &__pagination-bar {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 8px;
     @media (min-width: $screen-sm) {
       flex-direction: row;
+      align-items: center;
     }
   }
   &__sub-header {
