--- a/web/styles/mixins/typography.scss
+++ b/web/styles/mixins/typography.scss
@@ -18,6 +18,7 @@
     -webkit-box-orient: vertical;
   } @else {
     white-space: nowrap;
+    display: block !important;
   }
 }
 @mixin style2-header() {
