--- a/web/components/Progress/progress.scss
+++ b/web/components/Progress/progress.scss
@@ -113,6 +113,13 @@
       padding: 0;
     }
   }
+  &--flat-top {
+    position: fixed;
+    height: 4px;
+    .tp-progress__spinner {
+      width: 100%;
+    }
+  }
 }
 
 .tp-folding-cube {
