--- a/web/components/Dialog/dialog.scss
+++ b/web/components/Dialog/dialog.scss
@@ -158,6 +158,38 @@
       }
     }
   }
+  &--fixed-right-large {
+    .MuiDialog-paperWidthSm {
+      @media (min-width: $screen-sm) {
+        max-width: 700px !important;
+      }
+    }
+    .MuiPaper-root.MuiDialog-paperScrollPaper {
+      width: 100%;
+      max-height: 100%;
+      position: fixed;
+      top: 0;
+      right: 0;
+      height: 100%;
+      bottom: 0;
+      margin: auto;
+      overflow: unset;
+    }
+    @media (min-width: $screen-sm) {
+      .sq-dialog__close {
+        left: -24px;
+        z-index: $z-index-level-4;
+        right: unset;
+        background: white !important;
+        border-radius: 5px!important;
+        .sq-icon {
+          color:grey;
+          background-color: white;
+          border-radius: 5px;
+        }
+      }
+    }
+  }
 }
 .MuiDialogContent-root {
   position: relative;
