--- a/web/styles/application/containers.scss
+++ b/web/styles/application/containers.scss
@@ -6,6 +6,8 @@
 @import "../../containers/Documentation/_documentation.scss";
 
 @import "../../containers/DynamicContent/_dynamic-content.scss";
+@import "../../containers/EmailTemplateList/_email-template.scss";
+@import "../../containers/GenericListing/_generic-listing.scss";
 @import "../../containers/LayoutContent/_layout-content.scss";
 @import "../../containers/MediaGallery/_media-gallery.scss";
 
