--- a/web/styles/_containers.scss
+++ b/web/styles/_containers.scss
@@ -1,15 +1,15 @@
 
 .application {
-  &--for-app {
-    padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
-    padding-top: env(safe-area-inset-top); /* iOS 11.2 */
-    padding-bottom: constant(safe-area-inset-bottom); /* iOS 11.0 */
-    padding-bottom: env(safe-area-inset-bottom); /* iOS 11.2 */
-    padding-left: constant(safe-area-inset-left); /* iOS 11.0 */
-    padding-left: env(safe-area-inset-left); /* iOS 11.2 */
-    padding-right: constant(safe-area-inset-right); /* iOS 11.0 */
-    padding-right: env(safe-area-inset-right); /* iOS 11.2 */
-  }
+  // &--for-app {
+  //   padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
+  //   padding-top: env(safe-area-inset-top); /* iOS 11.2 */
+  //   padding-bottom: constant(safe-area-inset-bottom); /* iOS 11.0 */
+  //   padding-bottom: env(safe-area-inset-bottom); /* iOS 11.2 */
+  //   padding-left: constant(safe-area-inset-left); /* iOS 11.0 */
+  //   padding-left: env(safe-area-inset-left); /* iOS 11.2 */
+  //   padding-right: constant(safe-area-inset-right); /* iOS 11.0 */
+  //   padding-right: env(safe-area-inset-right); /* iOS 11.2 */
+  // }
 }
 .MuiDialog-root {
   margin-top: constant(safe-area-inset-top); /* iOS 11.0 */
